--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -370,12 +370,12 @@
                 </div>
                 <div class="portfolio-overlay">
                   <div class="portfolio-actions">
-                    <a
+                    {% comment %} <a
                       href="https://github.com/Rudrakshsachdev/Rudraksh.dev-portfolio"
                       class="action-btn"
                       aria-label="View project details"
                       ><i class="fas fa-eye"></i
-                    ></a>
+                    ></a> {% endcomment %}
                     <a
                       href="https://rudraksh-dev-portfolio.vercel.app/"
                       class="action-btn"
@@ -412,12 +412,12 @@
                 </div>
                 <div class="portfolio-overlay">
                   <div class="portfolio-actions">
-                    <a
+                    {% comment %} <a
                       href="https://github.com/Rudrakshsachdev/AIgnite_Website.git"
                       class="action-btn"
                       aria-label="View project details"
                       ><i class="fas fa-eye"></i
-                    ></a>
+                    ></a> {% endcomment %}
                     <a
                       href="https://aignitetech.vercel.app/"
                       class="action-btn"
@@ -458,12 +458,12 @@
                 </div>
                 <div class="portfolio-overlay">
                   <div class="portfolio-actions">
-                    <a
+                    {% comment %} <a
                       href="https://github.com/Rudrakshsachdev/Gemini_Clone.git"
                       class="action-btn"
                       aria-label="View project details"
                       ><i class="fas fa-eye"></i
-                    ></a>
+                    ></a> {% endcomment %}
                     <a
                       href="https://www.linkedin.com/posts/rudraksh-sachdeva-a35179326_ai-googlegemini-webdevelopment-activity-7337801940052955138--A_z?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFJAJYkBfyYkYTCSp87rxkUE5CbB9Bm07q0"
                       class="action-btn"
